--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,11 @@
   "manifest_version": 3,
   "name": "YouTube Channel Blacklist",
   "version": "1.0",
+  "icons": {
+		"16": "/img/icon_16.png",
+		"32": "/img/icon_32.png",
+		"128": "/img/icon_128.png"
+	},
   "description": "Hide videos from blacklisted YouTube channels.",
   "permissions": [
     "storage",
