--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://www.youtube.com/*"],
+      "matches": ["*://www.youtube.com/*", "*://www.m.youtube.com/*"],
       "js": ["content.js"]
     }
   ]
