Added images and privacy policy

--- a/src/chrome/manifest.json
+++ b/src/chrome/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "YouTube Channel Blacklist",
+  "name": "YouTube Channels Blacklist",
   "version": "1.0",
   "icons": {
 		"16": "./images/icon_16.png",
