--- a/src/chrome/manifest.json
+++ b/src/chrome/manifest.json
@@ -9,9 +9,7 @@
 	},
   "description": "Hide videos from blacklisted YouTube channels.",
   "permissions": [
-    "storage",
-    "activeTab",
-    "scripting"
+    "storage"
   ],
   "action": {
     "default_popup": "./popup/popup.html"
