--- a/src/chrome/manifest.json
+++ b/src/chrome/manifest.json
@@ -19,7 +19,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://www.youtube.com/*", "*://www.m.youtube.com/*"],
+      "matches": ["*://www.youtube.com/*", "*://m.youtube.com/*"],
       "js": ["./scripts/content.js"]
     }
   ]
