--- a/src/firefox/manifest.json
+++ b/src/firefox/manifest.json
@@ -28,7 +28,7 @@
     },
     "content_scripts": [
         {
-        "matches": ["*://www.youtube.com/*", "*://www.m.youtube.com/*"],
+        "matches": ["*://www.youtube.com/*", "*://m.youtube.com/*"],
         "js": ["content_scripts/content.js"]
         }
     ],
